--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ android {
 }
 
 dependencies {
+    // google compose pager
+    implementation 'com.google.accompanist:accompanist-pager:0.21-0-beta'
+    implementation 'com.google.accompanist:accompanist-pager-indicators:0.21.0-beta'
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
